# StatsBot

./: .gitignore  OPTIMIZATION_GUIDE.md  README.md  diagnose_bot.py  main.py  manage_sync.sh  pyproject.toml  requirements.txt  sync_logs_daemon.py  test_cache.py  test_core_infrastructure.py  test_error_handling.py  test_monitoring_service.py  test_performance_monitoring.py  test_stats_tracker.py  test_structured_logging.py
.kiro/specs/discord-webhook-logging/: design.md  requirements.md  tasks.md
.kiro/specs/statsbot-optimization/: design.md  requirements.md  tasks.md
config/: .env.example  config.py  webhook_config.json
data/: final_stats.json  member_stats.json
examples/: webhook_logging_example.py
scripts/: benchmark.py
src/core/: __init__.py  bot.py  config.py  exceptions.py  service_coordinator.py
src/services/: credits.py  monitoring.py  rich_presence.py  stats.py  stats_tracker.py  webhook_logging.py
src/services/monitoring/: __init__.py  service.py
src/services/presence/: __init__.py  service.py  types.py  utils.py
src/services/stats/: __init__.py  service.py  tracker.py
src/types/: __init__.py  models.py
src/utils/: __init__.py  config_validator.py  memory_optimizer.py  network_optimizer.py  performance.py  resource_manager.py  tree_log.py
src/utils/async_utils/: __init__.py  async_helpers.py  event_queue.py  semaphore_manager.py  task_manager.py
src/utils/cache/: __init__.py  cache_manager.py  circular_buffer.py
src/utils/error_handling/: __init__.py  backoff.py  circuit_breaker.py  connection_recovery.py  retry.py
src/utils/file_io/: __init__.py  atomic_writer.py  data_validator.py  json_utils.py
src/utils/logging/: __init__.py  log_rotation.py  structured_logger.py
src/utils/performance/: __init__.py  memory_monitor.py  timing.py
src/utils/webhook_logging/: README.md  __init__.py  config.py  integration.py  message_formatter.py  webhook_manager.py
tests/: __init__.py  conftest.py  mocks.py  test_circular_import_fix.py  test_project_integrity.py  test_webhook_fix.py  test_webhook_fix_simple.py  test_webhook_logging.py  test_webhook_logging_system.py
tests/unit/: test_async_operations.py  test_config.py  test_connection_recovery.py  test_core_bot.py  test_file_io.py  test_performance.py  test_rich_presence_service.py  test_stats_service.py
tests/unit/utils/: test_message_formatter.py  test_message_formatter_simple.py  test_webhook_logging.py
